k8s/consul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: "consul:latest"
          command:
            - "/bin/sh"
            - "-ec"
            - |
              export CONSUL_HTTP_ADDR="${HOST_IP}:8500"
              consul kv put hello world
---

apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  type: NodePort
  ports:
    - name: client
      port: 8500
      protocol: TCP
      targetPort: 8500
  selector:
    app: consul
